--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         uses: burnett01/rsync-deployments@5.2
         with:
           switches: -avzr --delete
-          path: target/demo-0.0.1-SNAPSHOT.jar
+          path: target/demo-0.0.1-SNAPSHOT.jar deploy.sh
           remote_path: /home/app
           remote_host: ${{ secrets.DEPLOY_HOST }}
           remote_port: 22
